# world-engine

./: .eslintrc.json  .gitignore  .worldengine.yaml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-lore-entry.md
.github/workflows/: manual-test.yaml  validate.yaml  validate.yml
docs/: CLI.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  EPOCH_GUIDE.md  EPOCH_GUIDE.zh.md  INDEX.md  NAMING.md  NAMING.zh.md  README.md  STYLE_GUIDE.md  STYLE_GUIDE.zh.md  TEMPLATES.md  TIME_SYSTEM.md  TUTORIAL.md  VALIDATION.md  VERSIONING.md
engine/: cli.py  loader.py  schema_export.py
engine/ai/: provider.py  reviewer.py
engine/rules/: __init__.py  graph.py  naming.py  references.py  timeline.py
schemas/: __init__.py  artifact.py  base.py  character.py  civilization.py  concept.py  creature.py  epoch.py  event.py  location.py  meta.py  relation.py
src/: index.ts
src/cli/: commands.property.test.ts  commands.ts  index.ts  validate-ci.ts
src/registry/: index.ts  manager.property.test.ts  manager.test.ts  manager.ts
src/template/: index.ts  loader.property.test.ts  loader.test.ts  loader.ts  validator.ts
src/types/: index.test.ts  index.ts
src/validator/: canon-validator.property.test.ts  canon-validator.test.ts  canon-validator.ts  ci-validator.property.test.ts  ci-validator.test.ts  ci-validator.ts  constraint.property.test.ts  constraint.test.ts  (+30 more)
templates/: artifact.yaml  character.yaml  concept.yaml  creature.yaml  faction.yaml  flora.yaml  history.yaml  location.yaml  race.yaml
(+65 files in other folders)
